replaced html links with md links

--- a/prep/_post/2013-9-25-tictactoe-v003.md
+++ b/prep/_post/2013-9-25-tictactoe-v003.md
@@ -34,4 +34,4 @@ I think they should be taken by <em>'NoPlayer'</em> - so we have to implement an
 
 The feature that we will implement after those refactorings is a sligthly harder AI that actually thinks before making a move.
 
-You can <a title="TicTacToeV003.zip" href="http://blog.aypahyo.net/tictactoe/TicTacToeV003.zip" target="_blank">Download the sourcecode here</a>.
+You can [Download the sourcecode here](http://blog.aypahyo.net/tictactoe/TicTacToeV003.zip).
