removed final html traces and fixed most issues.

--- a/prep/_post/2013-9-25-tictactoe-v003.md
+++ b/prep/_post/2013-9-25-tictactoe-v003.md
@@ -4,7 +4,7 @@ title: tic tac toe v003
 ---
 
 *The state of Version 003*
-<img alt="model of the tictactoe programming project" src="http://blog.aypahyo.net/tictactoe/TicTacToeV003.png" />
+![model of the tictactoe programming project](http://blog.aypahyo.net/tictactoe/TicTacToeV003.png)
 
 In Version 3 I included an AI-Player and added three more game modes. The computer player has its own set of tests to ensure its function.
 
