adapted links to fit relative image path

--- a/prep/_post/2013-9-25-tictactoe-v003.md
+++ b/prep/_post/2013-9-25-tictactoe-v003.md
@@ -4,7 +4,7 @@ title: tic tac toe v003
 ---
 
 *The state of Version 003*
-![model of the tictactoe programming project](http://blog.aypahyo.net/tictactoe/TicTacToeV003.png)
+![model of the tictactoe programming project](/images/2013-9-25/TicTacToeV003.png)
 
 In Version 3 I included an AI-Player and added three more game modes. The computer player has its own set of tests to ensure its function.
 
@@ -38,5 +38,3 @@ Map tiles that are not taken by a player bare the *char(32)* (= spacebar charact
 I think they should be taken by *'NoPlayer'* - so we have to implement an *IPlayer* interface for *NoPlayer* and use that instead of *char(32)*.
 
 The feature that we will implement after those refactorings is a sligthly harder AI that actually thinks before making a move.
-
-You can [Download the sourcecode here](http://blog.aypahyo.net/tictactoe/TicTacToeV003.zip).
